1.Home Screen 2.Contact us. 3.splash screen. 4.MyMap Screen 5.Map creen

--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="#b71e3e"
-        android:endColor="#940e2a"
+        android:endColor="#b71e3e"
         android:angle="270"
         />
     <corners android:radius="5dp" />
