--- a/app/src/main/res/layout/activity_delivery_deatails.xml
+++ b/app/src/main/res/layout/activity_delivery_deatails.xml
@@ -65,10 +65,11 @@
                     android:id="@+id/et_recievername"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
-                    android:gravity="start"
+                    android:background="@color/transparent"
+                    android:gravity="start|center_vertical"
                     android:inputType="text"
                     android:maxLength="255"
-                    android:background="@color/transparent"
+                    android:paddingStart="5dp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/gray_text_color"
                     android:textDirection="locale" />
@@ -94,9 +95,10 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_emailaddress"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
+                    android:layout_height="35dp"
+                    android:gravity="start|center_vertical"
                     android:inputType="text"
+                    android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textDirection="locale"
@@ -126,15 +128,16 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_mobile"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
                     android:inputType="number"
                     android:hint="@string/mobile_number_9715xxxxxxxx"
                     android:maxLength="12"
+                    android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textDirection="locale"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
-                    android:gravity="start" />
+                    android:gravity="start|center_vertical" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -160,9 +163,10 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_makani"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
                     android:gravity="start"
                     android:maxLength="10"
+                    android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:inputType="number"
@@ -184,14 +188,15 @@
                 android:textDirection="locale" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/edittext_background">
             <Spinner
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
                     android:id="@+id/et_emirates"
-                    android:layout_marginTop="5dp"
-                    android:gravity="start"
+
+                    android:gravity="start|center_vertical"
+                    android:paddingStart="5dp"
                     android:layoutDirection="locale"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -220,9 +225,10 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_villa_building_number"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
+                    android:layout_height="35dp"
+                    android:gravity="start|center_vertical"
                     android:inputType="text"
+                    android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -250,9 +256,10 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_buildingName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
+                    android:layout_height="35dp"
+                    android:gravity="start|center_vertical"
                     android:inputType="text"
+                    android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -282,9 +289,10 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_streetAddress"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
+                    android:layout_height="35dp"
+                    android:gravity="start|center_vertical"
                     android:singleLine="true"
+                    android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -313,8 +321,9 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_adress"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
+                    android:layout_height="35dp"
+                    android:gravity="start|center_vertical"
+                    android:paddingStart="5dp"
                     android:background="@color/transparent"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
@@ -346,8 +355,9 @@
                 <dm.sime.com.kharetati.view.customview.CleanableEditText
                     android:id="@+id/et_landmark"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
+                    android:layout_height="35dp"
+                    android:gravity="start|center_vertical"
+                    android:paddingStart="5dp"
                     android:inputType="text"
                     android:singleLine="true"
                     android:background="@color/transparent"
