--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,8 +20,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
+            android:visibility="gone"
             android:scaleType="fitXY"
             android:src="@mipmap/building"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+        <ImageView
+            android:id="@+id/imgsplash"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:layout_marginTop="-120dp"
+            android:visibility="visible"
+            android:scaleType="fitXY"
+            android:src="@drawable/splashscreen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -34,6 +50,7 @@
             android:layout_height="@dimen/splash_logo_height"
             android:id="@+id/logoSplash"
             android:scaleType="centerCrop"
+            android:visibility="gone"
             android:layout_gravity="bottom|right"
             android:layout_marginTop="@dimen/splash_logo_margin_top"
             android:layout_marginBottom="@dimen/splash_logo_margin_bottom"
