--- a/app/src/main/res/drawable/marron_angle_disabled_background.xml
+++ b/app/src/main/res/drawable/marron_angle_disabled_background.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:radius="15dp" />
     <gradient
         android:angle="0"
-        android:startColor="#b71e3e"
-        android:endColor="#b71e3e"
+        android:startColor="#80b71e3e"
+        android:endColor="#80b71e3e"
         android:type="linear"
+
         />
 </shape>
