--- a/app/src/main/res/drawable/rounded_corner_theme_bg.xml
+++ b/app/src/main/res/drawable/rounded_corner_theme_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#fcfcfc"/>
-    <stroke android:width="2dp" android:color="#E1E1E1" />
+    <stroke android:width="1dp" android:color="#b5b4b4" />
     <corners android:radius="16dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
