--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingHorizontal="10dp"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal"
             android:background="#fcfcfc"
             android:weightSum="1">
@@ -34,7 +35,7 @@
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="36dp"
+                android:layout_height="32dp"
                 android:textColor="@color/white"
                 android:textAllCaps="true"
                 android:layout_marginTop="4dp"
@@ -71,6 +72,7 @@
                 android:fontFamily="@font/dubai_font"
                 android:singleLine="false"
                 android:maxLines="2"
+                android:textColor="#b1abab"
                 android:layout_marginStart="5dp"
                 android:text='@{adapterMyMapVM.getCurrentMyMap(position).req_created_date ?? ""}'
                 android:textAlignment="viewStart"
@@ -91,12 +93,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="0.22">
+                android:layout_weight="0.25">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:paddingHorizontal="10dp"
                     android:background="#fcfcfc"
                     android:gravity="center_vertical">
@@ -132,7 +134,7 @@
                     android:gravity="center_vertical"
                     android:layout_marginStart="5dp"
                     android:paddingHorizontal="5dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     >
                     <TextView
 
@@ -153,6 +155,7 @@
                         android:fontFamily="@font/dubai_font"
                         android:singleLine="false"
                         android:maxLines="2"
+                        android:textColor="#b1abab"
                         android:layout_marginStart="5dp"
                         android:text='@{adapterMyMapVM.getCurrentMyMap(position).req_created_date ?? ""}'
                         android:textAlignment="viewStart"
@@ -171,7 +174,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="10dp"
                         android:gravity="center_vertical">
                         <TextView
                             android:layout_width="wrap_content"
@@ -187,6 +190,7 @@
                             android:fontFamily="@font/dubai_font"
                             android:textSize="14sp"
                             android:id="@+id/plotNo"
+                            android:textColor="#b1abab"
                             android:layout_marginHorizontal="5dp"
                             android:layout_marginVertical="5dp"
                             android:text='@{adapterMyMapVM.getCurrentMyMap(position).parcel_id ?? ""}'/>
@@ -200,8 +204,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:paddingHorizontal="10dp"
                     android:gravity="center_vertical"
                     >
@@ -222,6 +226,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/reqStatus"
                         android:textSize="14sp"
+                        android:textColor="#b1abab"
                         android:textAlignment="viewStart"
                         android:fontFamily="@font/dubai_font"
                         android:text=""
@@ -239,9 +244,9 @@
                 android:orientation="vertical"
                 android:layout_margin="5dp"
 
-                android:layout_weight=".78">
+                android:layout_weight=".75">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:orientation="horizontal"
                     android:weightSum="1">
@@ -250,6 +255,7 @@
                         android:layout_width="32dp"
                         android:layout_height="48dp"
                         android:layout_weight=".5"
+                        android:padding="5dp"
                         android:layout_margin="2.5dp"
                         android:fontFamily="@font/dubai_font"
                         android:id="@+id/view"
@@ -262,6 +268,7 @@
                         android:src="@drawable/makani_512"
                         android:id="@+id/gotomakani"
                         android:layout_weight=".5"
+                        android:padding="5dp"
                         android:fontFamily="@font/dubai_font"
                         android:layout_margin="2.5dp"
                         />
