--- a/app/src/main/res/layout/attachment_drp_view.xml
+++ b/app/src/main/res/layout/attachment_drp_view.xml
@@ -9,16 +9,17 @@
     <TextView
         android:id="@+id/txtLandOwner"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:layoutDirection="locale"
         android:textAlignment="viewStart"
         android:layout_marginTop="10dp"
-        android:gravity="start"
+        android:gravity="start|center_vertical"
+
+        android:textSize="14sp"
         android:textColor="@color/gray_text_color"
-        style="@style/font_medium_bold"
         android:fontFamily="@font/dubai_font"
         android:textStyle="bold" />
 </RelativeLayout>
