--- a/app/src/main/res/layout/fragment_contactus.xml
+++ b/app/src/main/res/layout/fragment_contactus.xml
@@ -47,7 +47,7 @@
                 <LinearLayout
                     android:id="@+id/layoutMap"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="230dp"
                     android:orientation="horizontal">
 
                     <com.esri.arcgisruntime.mapping.view.MapView
@@ -79,7 +79,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="5dp"
+
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
                             android:layout_weight="1"
                             android:orientation="horizontal">
 
@@ -102,6 +104,7 @@
                                 <TextView
                                     android:id="@+id/TVfindus"
                                     android:text="@string/finddus"
+                                    android:textColor="@color/contact_text_color"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="3dp" />
@@ -111,9 +114,10 @@
                                     android:textStyle="bold"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:textColor="@color/contact_text_color"
                                     android:text="@string/alriga"
                                     android:textAlignment="gravity"
-                                    android:textColor="@color/black" />
+                                     />
 
 
                             </LinearLayout>
@@ -130,7 +134,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="5dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
                             android:layout_weight="1"
                             android:orientation="horizontal">
 
@@ -154,18 +159,20 @@
 
                                 <TextView
                                     android:text="@string/callus"
+                                    android:textColor="@color/contact_text_color"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="3dp" />
                                 <TextView
                                     android:textSize="15sp"
                                     android:textStyle="bold"
+                                    android:textColor="@color/contact_text_color"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/phone"
                                     android:id="@+id/TVDMPhoneNumber"
                                     android:textAlignment="gravity"
-                                    android:textColor="@color/black" />
+                                    />
                             </LinearLayout>
 
                         </LinearLayout>
@@ -194,7 +201,8 @@
                             android:id="@+id/LLDMWebsite"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
                             android:layout_gravity="center"
                             android:layout_weight="1"
                             android:orientation="horizontal">
@@ -214,7 +222,7 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <TextView
-
+                                    android:textColor="@color/contact_text_color"
                                     android:text="@string/visitus"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -225,9 +233,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/Website"
-
+                                    android:textColor="@color/contact_text_color"
                                     android:id="@+id/TVDMWebsite"
-                                    android:textColor="@color/black" />
+                                     />
 
 
                             </LinearLayout>
@@ -244,7 +252,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="5dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
                             android:layout_weight="1"
                             android:orientation="horizontal">
 
@@ -265,6 +274,7 @@
                                 <TextView
 
                                     android:text="@string/mailus"
+                                    android:textColor="@color/contact_text_color"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="3dp" />
@@ -275,7 +285,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="@string/email2"
                                     android:id="@+id/TVDMEmail"
-                                    android:textColor="@color/black" />
+                                    android:textColor="@color/contact_text_color" />
 
 
                             </LinearLayout>
@@ -347,7 +357,8 @@
                             android:id="@+id/LLDMLiveChat"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
                             android:layout_weight="1"
                             android:layout_gravity="center"
                             android:orientation="horizontal">
@@ -369,6 +380,7 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
+                                    android:textColor="@color/contact_text_color"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="3dp"
                                     android:text="@string/reachus" />
@@ -378,7 +390,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/Chat"
-                                    android:textColor="@color/black" />
+                                    android:textColor="@color/contact_text_color" />
 
 
                             </LinearLayout>
@@ -393,7 +405,8 @@
                             android:id="@+id/LLDMFeedback"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
                             android:layout_gravity="center"
                             android:layout_weight="1"
                             android:orientation="horizontal">
@@ -416,6 +429,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="3dp"
+                                    android:textColor="@color/contact_text_color"
                                     android:text="@string/sendus" />
 
                                 <TextView
@@ -424,7 +438,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/feedback"
-                                    android:textColor="@color/black" />
+
+                                    android:textColor="@color/contact_text_color"/>
 
 
                             </LinearLayout>
@@ -446,10 +461,11 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-
+                            android:layout_marginVertical="10dp"
                             android:weightSum="4"
-                            android:layout_marginVertical="16dp"
-                            android:layout_marginHorizontal="16dp"
+                            android:layout_marginHorizontal="15dp"
+                            android:gravity="center"
+
                             android:orientation="horizontal">
 
                             <ImageView
@@ -457,6 +473,7 @@
                                 android:layout_width="48dp"
                                 android:layout_height="48dp"
                                 android:layout_weight="1"
+                                android:layout_margin="10dp"
                                 android:contentDescription="@string/facebook"
                                 app:srcCompat="@drawable/facebook_512" />
 
@@ -464,6 +481,7 @@
                                 android:id="@+id/imgTwitter"
                                 android:layout_width="48dp"
                                 android:layout_height="48dp"
+                                android:layout_margin="10dp"
                                 android:layout_weight="1"
                                 android:contentDescription="@string/twitter"
                                 app:srcCompat="@drawable/twitter_512" />
@@ -472,6 +490,7 @@
                                 android:id="@+id/imgInstagram"
                                 android:layout_width="48dp"
                                 android:layout_height="48dp"
+                                android:layout_margin="10dp"
                                 android:layout_weight="1"
                                 android:contentDescription="@string/instagram"
                                 app:srcCompat="@drawable/insta_512" />
@@ -480,6 +499,7 @@
                                 android:id="@+id/imgYoutube"
                                 android:layout_width="48dp"
                                 android:layout_height="48dp"
+                                android:layout_margin="10dp"
                                 android:layout_weight="1"
                                 android:contentDescription="@string/youtube"
                                 app:srcCompat="@drawable/youtube_512" />
