--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -25,8 +25,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:background="@drawable/capsule_white_bg"
                 android:layout_gravity="center"
                 app:cardCornerRadius="20dp"
@@ -34,15 +34,15 @@
                 <LinearLayout
                     android:id="@+id/layoutMyMap"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:background="@drawable/capsule_white_bg"
                     android:layout_gravity="center"
                     android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/imgMyMap"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                        android:layout_margin="8dp"
                         android:layout_gravity="center"/>
 
@@ -62,10 +62,10 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:background="@drawable/capsule_white_bg"
                 android:layout_gravity="center"
                 app:cardCornerRadius="20dp"
@@ -73,7 +73,7 @@
                 <LinearLayout
                     android:id="@+id/layoutBookmark"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
 
                     android:background="@drawable/capsule_white_bg"
@@ -82,8 +82,8 @@
 
                     <ImageView
                         android:id="@+id/imgBookMark"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:layout_margin="8dp" />
                     <TextView
