--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,6 +85,7 @@
                     android:id="@+id/layoutRuntimeContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="100dp"
                     android:layout_below="@+id/layoutDots"
                     android:visibility="gone"
