--- a/app/src/main/res/layout/fragment_mymap.xml
+++ b/app/src/main/res/layout/fragment_mymap.xml
@@ -16,7 +16,7 @@
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
+                android:layout_height="72dp"
                 android:weightSum="3"
                 android:layout_marginStart="8dp"
                 android:paddingTop="8dp"
@@ -28,15 +28,16 @@
                     android:id="@+id/findSitePlan"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_corners_green_bg"
                     android:orientation="horizontal">
                     <ImageView
-                        android:layout_width="19dp"
-                        android:layout_height="19dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginStart="6dp"
+                        android:layout_marginStart="16dp"
                         android:padding="2dp"
                         android:id="@+id/imgSearch"
                         android:src="@drawable/search_icon"
@@ -46,15 +47,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
-                        android:layout_marginStart="5dp"
+                        android:layout_marginStart="8dp"
                         android:id="@+id/txtSearch"
-
+                        android:fontFamily="@font/dubai_font"
                         android:paddingEnd="5dp"
 
                         android:text="@string/search"
                         android:textAllCaps="false"
                         android:textColor="#fff"
-                        android:textSize="14sp" />
+                        android:textSize="16sp" />
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/reset"
@@ -65,31 +66,31 @@
                     android:background="@drawable/rounded_corners_bg"
                     android:orientation="horizontal">
                     <ImageView
-                        android:layout_width="19dp"
-                        android:layout_height="19dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:backgroundTint="#000"
                         android:id="@+id/imgReset"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginStart="6dp"
-                        android:src="@drawable/reload"
-                        android:layout_marginLeft="6dp" />
+                        android:layout_marginStart="16dp"
+                        android:src="@drawable/reload" />
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
-                        android:layout_marginStart="5dp"
+                        android:layout_marginStart="8dp"
                         android:id="@+id/txtReset"
-                        android:paddingEnd="5dp"
+                        android:paddingEnd="8dp"
+                        android:fontFamily="@font/dubai_font"
                         android:text="@string/reset"
                         android:textAllCaps="false"
-                        android:textSize="14sp"
+                        android:textSize="16sp"
                         android:textColor="#000" />
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_weight="1.05"
+                    android:layout_weight="1"
                     android:gravity="end|center_vertical"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
