1.Home Screen 2.Contact us. 3.splash screen. 4.MyMap Screen 5.Map creen

--- a/app/src/main/res/layout/activity_delivery_deatails.xml
+++ b/app/src/main/res/layout/activity_delivery_deatails.xml
@@ -188,7 +188,7 @@
                 android:textDirection="locale" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/edittext_background">
             <Spinner
                     android:layout_width="match_parent"
