--- a/app/src/main/res/layout/adapter_bookmark.xml
+++ b/app/src/main/res/layout/adapter_bookmark.xml
@@ -22,6 +22,7 @@
             android:orientation="vertical" android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="3dp"
+            android:background="#fcfcfc"
             android:id="@+id/rowBookmark"
             >
             <LinearLayout
@@ -62,6 +63,7 @@
                 android:layout_weight="1.00"
                 android:background="#fcfcfc"
                 android:paddingHorizontal="10dp"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
 
@@ -142,7 +144,7 @@
                         android:layout_marginStart="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"/>
+                        android:layout_marginTop="8dp"/>
 
 
                 </LinearLayout>
@@ -170,7 +172,7 @@
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
                                 android:fontFamily="@font/dubai_font"
-                                android:padding="5dp"
+                                android:padding="6dp"
                                 android:layout_gravity="start"
                                 android:id="@+id/view"
                                 android:src="@drawable/map_512"/>
@@ -186,7 +188,7 @@
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
                                 android:fontFamily="@font/dubai_font"
-                                android:padding="5dp"
+                                android:padding="6dp"
                                 android:src="@drawable/edit_512"/>
                         </LinearLayout>
                         <LinearLayout
@@ -200,7 +202,7 @@
                                 android:layout_height="40dp"
                                 android:src="@drawable/delete_512"
                                 android:fontFamily="@font/dubai_font"
-                                android:padding="5dp"
+                                android:padding="6dp"
                                 />
                         </LinearLayout>
                         <LinearLayout
@@ -214,7 +216,7 @@
                                 android:layout_height="40dp"
                                 android:src="@drawable/makani_512"
                                 android:fontFamily="@font/dubai_font"
-                                android:padding="5dp"
+                                android:padding="6dp"
 
                                 />
                         </LinearLayout>
