--- a/app/src/main/res/layout/attachment_drp_ar.xml
+++ b/app/src/main/res/layout/attachment_drp_ar.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:textStyle="bold"
-        style="@style/font_medium_bold"
+        android:textSize="14sp"
         android:fontFamily="@font/dubai_font"
         android:textColor="@color/black" />
     <ImageView
