--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -23,15 +23,15 @@
             <LinearLayout
                 android:id="@+id/fragment_map_layoutSearch"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_height="72dp"
+                android:layout_marginTop="4dp"
                 android:orientation="horizontal"
                 android:weightSum="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".35"
+                    android:layout_weight=".30"
                     android:layout_gravity="center"
                     android:background="@drawable/rounded_corner_theme_bg">
 
@@ -50,7 +50,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight=".10"
-                        android:paddingStart="5dp"
+                        android:paddingStart="16dp"
                         android:focusableInTouchMode="false"
                         android:fontFamily="@font/dubai_font"
                         android:gravity="start|center_vertical"
@@ -71,7 +71,7 @@
                         android:background="#00000000"
                         android:digits="0123456789"
                         android:fontFamily="@font/dubai_font"
-                        android:gravity="center_vertical|center_horizontal"
+                        android:gravity="bottom"
                         android:hint="-  -  -  -  -  -  -"
                         android:inputType="number"
                         android:ems="8"
@@ -97,6 +97,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:padding="10dp"
+                            android:layout_marginEnd="5dp"
                             android:src="@drawable/search_512" />
 
                     </LinearLayout>
@@ -106,7 +107,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|center"
-                    android:layout_weight=".65"
+                    android:layout_weight=".70"
+                    android:layout_marginStart="0dp"
                     android:gravity="end">
 
                     <LinearLayout
