--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -125,6 +125,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="1"
+                            android:textSize="12sp"
                             android:id="@+id/stepperOneText"
                             android:layout_gravity="center"
                             android:gravity="center"
@@ -156,6 +157,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="2"
+                            android:textSize="12sp"
                             android:id="@+id/stepperTwoText"
                             android:layout_gravity="center"
                             android:gravity="center"
@@ -189,6 +191,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="3"
+                            android:textSize="12sp"
                             android:id="@+id/stepperThreeText"
                             android:layout_gravity="center"
                             android:gravity="center"
@@ -221,6 +224,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="4"
+                            android:textSize="12sp"
                             android:id="@+id/stepperFourText"
                             android:layout_gravity="center"
                             android:gravity="center"
