--- a/app/src/main/res/drawable/disabled_gradient_background.xml
+++ b/app/src/main/res/drawable/disabled_gradient_background.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#80b71e3e"
-        android:endColor="#80b71e3e"
+        android:startColor="@color/maroon_light_transparent"
+        android:endColor="@color/maroon_light_transparent"
         android:angle="270"
         />
     <corners android:radius="5dp" />
