--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#b71e3e"
-        android:endColor="#b71e3e"
+        android:startColor="#a31533"
+        android:endColor="#a31533"
         android:angle="270"
         />
     <corners android:radius="5dp" />
