--- a/app/src/main/res/drawable/rounded_corners_bg.xml
+++ b/app/src/main/res/drawable/rounded_corners_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#fcfcfc"/>
-    <stroke android:width="2dp" android:color="#F1F3F4" />
+    <stroke android:width="1dp" android:color="#b5b4b4" />
     <corners android:radius="5dp"/>
     <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
 </shape>
