--- a/app/src/main/res/layout/activity_delivery_deatails.xml
+++ b/app/src/main/res/layout/activity_delivery_deatails.xml
@@ -14,24 +14,33 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="16dp"
             android:id ="@+id/linearLayout"
             android:orientation="vertical"
             android:layout_marginBottom="100dp">
-            <CheckBox
-                android:id="@+id/deliveryByCourier"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop = "8dp"
                 android:layout_marginBottom = "8dp"
-
                 android:background="@drawable/rounded_corner_theme_bg"
-                android:layout_gravity="start|center_vertical"
-                android:gravity="start|center_vertical"
-                android:text="@string/delivery_by_courier"
-                android:textColor="@color/gray_text_color"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+               >
+                <CheckBox
+                    android:id="@+id/deliveryByCourier"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="10dp"
+
+
+                    android:layout_gravity="start|center_vertical"
+                    android:gravity="start|center_vertical"
+                    android:text="@string/delivery_by_courier"
+                    android:textColor="@color/gray_text_color"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,6 +49,7 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/rounded_corner_theme_bg">
 
             <TextView
