--- a/app/src/main/res/layout/attachment_drp_view_ar.xml
+++ b/app/src/main/res/layout/attachment_drp_view_ar.xml
@@ -9,13 +9,12 @@
     <TextView
         android:id="@+id/txtLandOwner"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:layoutDirection="rtl"
         android:textAlignment="viewStart"
-        android:layout_marginTop="10dp"
         android:gravity="start|center_vertical"
         android:textColor="@color/gray_text_color"
         android:textSize="14sp"
