--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -38,7 +38,7 @@
             android:layout_marginTop="25dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/edittext_background"
+            android:background="@drawable/toolbar_bg"
             android:elevation="20dp"
             android:layoutDirection="locale"
             app:layout_constraintTop_toTopOf="parent">
@@ -48,7 +48,7 @@
                 android:layout_height="match_parent"
                 android:id="@+id/toolBarLayout"
 
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/toolbar_bg"
                 android:orientation="horizontal"
                 android:weightSum="1.65">
 
