--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -42,7 +42,7 @@
                     android:background="@drawable/rounded_corner_settings_bg">
 
                     <LinearLayout
-                        android:layout_width="387dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:padding="5dp">
@@ -57,12 +57,17 @@
                             android:text="@string/language"
                             android:textAlignment="viewStart"
                             android:textColor="@color/text_color" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="end">
 
                         <LinearLayout
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end|center_vertical"
                             android:layout_marginVertical="15dp"
+                            android:layout_marginEnd="16dp"
                             android:layout_marginStart="@dimen/settngs_switch_margin"
                             android:background="@drawable/capsule_white_bg_settings"
                             android:gravity="end"
@@ -94,6 +99,7 @@
                                 android:text="@string/arabic"
                                 android:textAlignment="center"
                                 android:textColor="@color/black" />
+                        </LinearLayout>
                         </LinearLayout>
 
                     </LinearLayout>
@@ -127,10 +133,15 @@
                         android:textColor="@color/text_color"
                         android:text="@string/talkback"/>
                     <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end">
+                    <LinearLayout
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/settngs_switch_margin"
                         android:layout_marginVertical="15dp"
+                        android:layout_marginEnd="16dp"
                         android:weightSum="2"
                         android:background="@drawable/capsule_white_bg_settings"
                         android:gravity="end">
@@ -159,6 +170,7 @@
                             android:layout_margin="4dp"
                             android:textColor="@color/black"
                             android:text="@string/off"/>
+                    </LinearLayout>
                     </LinearLayout>
 
                 </LinearLayout>
