--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,14 +11,14 @@
 
 
     <!-- dots active colors -->
-    <color name="maroon_light">#b71e3e</color>
+    <color name="maroon_light">#a31533</color>
     <color name="contact_text_color">#2a2a2a</color>
     <color name="maroon_light_transparent">#bc556b</color>
     <color name="maroon_dark">#940e2a</color>
     <color name="yellow_light">#cce3e330</color>
     <color name="light_blue">#5057FF</color>
     <color name="light_gray">#8e8e93</color>
-    <color name="gray_text_color">#333333</color>
+    <color name="gray_text_color">#2a2a2a</color>
     <color name="colorHeader">#008577</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="stepper_completed_color">#DC8A9B</color>
