--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,14 @@
                     <TextView
                         android:id="@+id/txtWelcome"
                         android:layout_width="match_parent"
-                        android:layout_height="35dp"
+                        android:layout_height="48dp"
                         android:fontFamily="@font/dubai_font"
                         android:text="@string/title_welcome"
                         android:textStyle="bold"
                         android:textColor="@color/white"
-                        android:textSize="26dp"
+                        android:textSize="26sp"
+                        android:gravity="center_vertical"
+                        android:textAlignment="viewStart"
                         android:textFontWeight="1000"
                         android:layout_marginEnd="10dp"
                         android:layout_marginStart="25dp"
@@ -58,6 +60,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:layout_marginTop="-12dp"
 
                     android:id="@+id/profileUsername"
                     android:gravity="center_vertical">
