--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -8,34 +8,41 @@
     android:layoutDirection="locale"
     android:layout_marginTop="100dp"
     android:layout_marginBottom="100dp"
-    android:layout_marginStart="24dp"
-    android:layout_marginEnd="24dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
     android:background="@drawable/rounded_corner_theme_bg"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center"
             android:layoutDirection="locale"
             >
+
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="350dp"
                 android:visibility="visible"
+
                 />
             <LinearLayout
                 android:id="@+id/layoutDots"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="-60dp"
                 android:gravity="center"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="10dp"
                 android:orientation="horizontal"/>
         </LinearLayout>
+    </ScrollView>
 
 
     </LinearLayout>
