--- a/app/src/main/res/layout/adapter_grid_menu.xml
+++ b/app/src/main/res/layout/adapter_grid_menu.xml
@@ -14,6 +14,7 @@
         android:layout_height="140dp"
         android:id="@+id/cardHomeGrid"
         android:elevation="10dp"
+        app:cardBackgroundColor="#fcfcfc"
         android:background="@drawable/grid_background_drawable"
         android:layout_margin="8dp"
         app:cardCornerRadius="16dp">
