--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
                 android:textColor="@color/white"
-                android:textAllCaps="true"
+                android:textAllCaps="false"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:textAlignment="center"
