--- a/app/src/main/res/layout/fragment_attachment.xml
+++ b/app/src/main/res/layout/fragment_attachment.xml
@@ -92,6 +92,8 @@
                   android:layout_height="25dp"
                   android:background="@drawable/button_background"
                   android:text="@string/view_image"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:textAllCaps="false"
                   android:textColor="@color/white"
                   android:textSize="14sp"
@@ -102,6 +104,8 @@
                   android:layout_width="77dp"
                   android:layout_height="25dp"
                   android:layout_marginTop="10dp"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:background="@drawable/button_background"
                   android:text="@string/change"
                   android:textAllCaps="false"
@@ -191,6 +195,8 @@
                   android:layout_height="25dp"
                   android:background="@drawable/button_background"
                   android:text="@string/view_image"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:textAllCaps="false"
                   android:textColor="@color/white"
                   android:textSize="14sp"
@@ -201,6 +207,8 @@
                   android:layout_width="77dp"
                   android:layout_height="25dp"
                   android:layout_marginTop="10dp"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:background="@drawable/button_background"
                   android:text="@string/change"
                   android:textAllCaps="false"
@@ -282,6 +290,8 @@
                   android:id="@+id/license_view"
                   android:layout_width="77dp"
                   android:layout_height="25dp"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:background="@drawable/button_background"
                   android:text="@string/view_image"
                   android:textAllCaps="false"
@@ -293,6 +303,8 @@
                   android:id="@+id/license_change"
                   android:layout_width="77dp"
                   android:layout_height="25dp"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/button_background"
                   android:text="@string/change"
@@ -412,6 +424,8 @@
                   android:layout_height="25dp"
                   android:background="@drawable/button_background"
                   android:text="@string/view_image"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:textAllCaps="false"
                   android:textColor="@color/white"
                   android:textSize="14sp"
@@ -422,6 +436,8 @@
                   android:layout_width="77dp"
                   android:layout_height="25dp"
                   android:layout_marginTop="10dp"
+                  android:layout_gravity="center"
+                  android:gravity="center"
                   android:background="@drawable/button_background"
                   android:text="@string/change"
                   android:textAllCaps="false"
