--- a/app/src/main/res/drawable/rounded_edittext_boarder_bg.xml
+++ b/app/src/main/res/drawable/rounded_edittext_boarder_bg.xml
@@ -3,11 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
     <stroke android:width="2dp" android:color="@color/maroon_light"/>
-    <gradient
-        android:startColor="#fcfcfc"
-        android:centerColor="#fcfcfc"
-        android:endColor="#fcfcfc"
-        android:angle="270" />
+    <solid android:color="#fcfcfc"/>
     <corners
         android:bottomRightRadius="25dp"
         android:bottomLeftRadius="25dp"
