--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
             android:layout_marginTop="-120dp"
             android:visibility="visible"
             android:scaleType="fitXY"
-            android:src="@drawable/splashscreen"
+            android:src="@drawable/splash"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -50,19 +50,20 @@
             android:layout_height="@dimen/splash_logo_height"
             android:id="@+id/logoSplash"
             android:scaleType="centerCrop"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_gravity="bottom|right"
             android:layout_marginTop="@dimen/splash_logo_margin_top"
             android:layout_marginBottom="@dimen/splash_logo_margin_bottom"
             android:layout_marginRight="@dimen/splash_logo_margin_right"
-            android:src="@drawable/logo_splash"/>
+            android:src="@drawable/dm_logo_500"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:elevation="20dp"
+            android:textStyle="bold"
             android:id="@+id/copyright_arabic"
             android:layout_marginTop="-25dp"
             android:layout_marginBottom="0dp"
@@ -75,11 +76,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:elevation="20dp"
+            android:textStyle="bold"
             android:id="@+id/copyright_english"
             android:layout_marginTop="-48dp"
-            android:layout_marginBottom="23dp"
+            android:layout_marginBottom="20dp"
             android:fontFamily="@font/dubai_font"
             android:textAlignment="center"
             android:textColor="@color/maroon_light"
@@ -143,7 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:backgroundTint="#fcfcfc"
+           app:cardBackgroundColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/slantViewLoginHeader"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
