--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="48dp"
+                        android:layout_marginTop="30dp"
+                        android:id="@+id/backButton"
+                        android:visibility="invisible"
+                        android:src="@drawable/back"/>
                     <TextView
                         android:id="@+id/txtWelcome"
                         android:layout_width="match_parent"
@@ -41,7 +48,7 @@
                         android:textAlignment="viewStart"
                         android:textFontWeight="1000"
                         android:layout_marginEnd="10dp"
-                        android:layout_marginStart="25dp"
+
                         android:layout_marginTop="30dp" />
                     <ImageView
                         android:id="@+id/imgHelp"
@@ -126,7 +133,8 @@
                     android:layout_marginStart="25dp"
                     android:textSize="15sp"
                     android:text="@string/lastlogin"
-                    style="@style/font_small_bold"
+                    android:textStyle="bold"
+                    android:textFontWeight="1000"
                     android:layout_gravity="start|center_vertical"
                     android:layout_marginTop="6dp"
                     android:layout_marginBottom="6dp"
@@ -178,8 +186,8 @@
             android:layout_height="80dp"
             android:layoutDirection="locale"
             android:background="#00000000"
-            app:mbn_circleColor="#b71e3e"
-            app:mbn_backgroundBottomColor="#b71e3e"
+            app:mbn_circleColor="@color/maroon_light"
+            app:mbn_backgroundBottomColor="@color/maroon_light"
             app:mbn_rippleColor="#2f424242"
             app:mbn_selectedIconColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
