--- a/app/src/main/res/layout/attachment_drp_en.xml
+++ b/app/src/main/res/layout/attachment_drp_en.xml
@@ -8,14 +8,15 @@
         android:id="@+id/txtLandOwner"
         android:singleLine="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:textDirection="locale"
         android:textAlignment="viewStart"
         android:textStyle="bold"
-        android:textSize="14sp"
+        android:textFontWeight="1000"
+        android:textSize="18sp"
         android:fontFamily="@font/dubai_font"
         android:layout_toLeftOf="@+id/imgChevron"
         android:textColor="@color/black" />
