--- a/app/src/main/res/layout/attachment_drp_view.xml
+++ b/app/src/main/res/layout/attachment_drp_view.xml
@@ -9,16 +9,14 @@
     <TextView
         android:id="@+id/txtLandOwner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
         android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
         android:layoutDirection="locale"
         android:textAlignment="viewStart"
-
         android:gravity="start|center_vertical"
-
-        android:textSize="14sp"
+        android:textSize="18sp"
+        android:textFontWeight="1000"
         android:textColor="@color/gray_text_color"
         android:fontFamily="@font/dubai_font"
         android:textStyle="bold" />
