--- a/app/src/main/res/layout/attachment_drp_view_ar.xml
+++ b/app/src/main/res/layout/attachment_drp_view_ar.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/txtLandOwner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
@@ -17,7 +17,8 @@
         android:textAlignment="viewStart"
         android:gravity="start|center_vertical"
         android:textColor="@color/gray_text_color"
-        android:textSize="14sp"
+        android:textSize="18sp"
+        android:textFontWeight="1000"
         android:fontFamily="@font/dubai_font"
         android:textStyle="bold" />
 </RelativeLayout>
