--- a/app/src/main/res/layout/bottomsheet_web_view.xml
+++ b/app/src/main/res/layout/bottomsheet_web_view.xml
@@ -7,21 +7,29 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     app:behavior_peekHeight="0dp"
+
     app:behavior_hideable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <View
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/topView"
+                android:visibility="invisible"
+                android:background="@color/maroon_light">
+            <View
                 android:layout_margin="20dp"
                 android:layout_centerHorizontal="true"
                 android:layout_width="200dp"
                 android:layout_height="2dp"
-                android:background="@color/maroon_dark"/>
+                android:visibility="visible"
+                android:background="@color/white"/></RelativeLayout>
             <!--<view
                 android:id="@+id/topView"
                 android:layout_margin="20dp"
@@ -33,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/webView"
+                android:paddingBottom="72dp"
                 android:layout_below="@+id/topView"/>
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
