--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -46,16 +46,15 @@
 
                     <TextView
                         android:id="@+id/textView27"
-                        android:layout_width="100dp"
+                        android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:layout_weight=".10"
+                        android:layout_weight=".05"
                         android:paddingStart="10dp"
                         android:focusableInTouchMode="false"
                         android:fontFamily="@font/dubai_font"
                         android:gravity="start|center_vertical"
-
-                        android:paddingTop="8dp"
+                        android:layout_gravity="center_vertical"
                         android:singleLine="false"
                         android:maxLines="2"
                         android:text="@string/findPlot"
@@ -65,9 +64,9 @@
 
                     <AutoCompleteTextView
                         android:id="@+id/fragment_bookmarks_plotnumber"
-                        android:layout_width="72dp"
+                        android:layout_width="90dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.20"
+                        android:layout_weight="0.35"
                         android:background="#00000000"
                         android:digits="0123456789"
                         android:fontFamily="@font/dubai_font"
@@ -89,7 +88,7 @@
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginEnd="5dp"
-                        android:layout_weight=".12">
+                        android:layout_weight=".10">
 
                         <ImageView
 
@@ -165,7 +164,7 @@
                 android:maxLines="2"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:visibility="gone" />
 
             <androidx.recyclerview.widget.RecyclerView
