--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:orientation="vertical"
         android:paddingStart="16dp"
         android:id="@+id/rootLayout"
         android:layoutDirection="locale"
-        android:layout_margin="24dp"
-        android:paddingTop="24dp"
-        android:layout_marginVertical="100dp">
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:paddingTop="16dp">
+
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="end|top"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="10dp"
+            android:alpha=".5"
             app:srcCompat="@drawable/ic_cancel"
             android:id="@+id/notification_cancel"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical">
         <TextView
             android:id="@+id/txtHeader"
             android:layout_width="match_parent"
@@ -26,7 +36,9 @@
             android:textStyle="bold"
             android:textAlignment="viewStart"
             android:textDirection="locale"
-            style="@style/font_small_bold"
+            android:textSize="14sp"
+            android:textFontWeight="1000"
+            android:fontFamily="@font/dubai_font"
             android:textColor="@color/maroon_light"
             android:layout_marginHorizontal="10dp"
            />
@@ -53,5 +65,27 @@
             style="@style/font_small_bold"
             android:layout_marginBottom="10dp"
             android:textStyle="normal"/>
+        <Button
+            android:id="@+id/btnViewDetails"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:textAllCaps="false"
+            android:textSize="14sp"
+            android:paddingHorizontal="16dp"
+            android:textColor="@color/white"
+            android:textDirection="locale"
+            android:text="@string/viewdetails"
+            android:layout_gravity="center"
+            android:background="@drawable/border_background"
+            android:layout_marginHorizontal="10dp"
+            style="@style/font_small_bold"
+            android:layout_marginBottom="10dp"
+            android:textStyle="normal"/>
+         </LinearLayout>
+        </ScrollView>
+
+
     </LinearLayout>
+
 </layout>
