--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -1,43 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
 
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="32dp"
-    android:layout_marginEnd="32dp"
+    android:layoutDirection="locale"
+
+    android:layout_marginStart="24dp"
+    android:layout_marginEnd="24dp"
     android:background="@drawable/rounded_corner_theme_bg"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:orientation="vertical"
             android:layoutDirection="locale"
-            android:layout_above="@+id/layoutDots"
-            android:layout_marginBottom="70dp">
-
+            >
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
+                android:layout_height="200dp"
                 android:visibility="visible"
-
                 />
+            <LinearLayout
+                android:id="@+id/layoutDots"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:orientation="horizontal"/>
         </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layoutDots"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"
 
-        android:orientation="horizontal"/>
-
-    </RelativeLayout>
+    </LinearLayout>
 
